--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ footer{
 .about-me h1{
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #fff;
+    color: #fff200;
 }
 
 .about-me p{
